# Barchart-Race

./: .gitignore  README.md  author.md
source/: CMakeLists.txt  Database.cpp  Database.h  animation.cpp  animation.h  barchart.cpp  barchart.h  bcr_am.cpp  bcr_am.h  file_parser.cpp  file_parser.h  main  main.cpp  renderer.h
source/libs/: coms.cpp  coms.h  text_color.h
